kubernetes/observability/loki/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-push
  namespace: observability
  annotations:
    external-dns.kubernetes.io/target: gateway.kakatkarakshay.dev
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: loki-kakatkarakshay-dev-tls
    options:
      name: loki-mtls
      namespace: observability
  routes:
    - kind: Rule
      match: Host(`loki.kakatkarakshay.dev`) && PathPrefix(`/loki/api/v1/push`)
      services:
        - kind: Service
          name: loki
          port: 3100
